--- a/configs/words_for_animals.yaml
+++ b/configs/words_for_animals.yaml
@@ -19,5 +19,12 @@ giraffe:
   plural:
     - les girafes
     - le giraffe
+squirrel:
+  singular:
+    - l'écureuil 
+    - lo scoiattolo
+  plural:
+    - les écureuils
+    - gli scoiattoli
 
     
