Add raven to words_for_animals.yaml

--- a/configs/words_for_animals.yaml
+++ b/configs/words_for_animals.yaml
@@ -47,4 +47,11 @@ octopus:
   plural:
     - les pieuvres
     - i polpi
+raven:
+  singular:
+    - le corbeau 
+    - il corvo
+  plural:
+    - les corbeaux
+    - i corvi
     
