Add objects in bathroom

--- a/configs/words_for_objects.yaml
+++ b/configs/words_for_objects.yaml
@@ -1,3 +1,16 @@
+bathroom:
+  bathtub:
+    - la bagnoire
+    - la vasca
+  shower:
+    - la douche
+    - la doccia
+  sink:
+    - la lavabo
+    - il lavandino
+  toilet:
+    - le toilettes
+    - il water
 kitchen:
   oven:
     - le four
